2006-11-09  Michael Natterer  <mitch@gimp.org>

	Properly abstract brush scaling:

	* app/core/gimpbrush.[ch]: added virtual functions
	GimpBrush::scale_mask() and ::scale_pixmap() and default
	implementations which call the functions in base/brush-scale.c.

	* app/core/gimpbrushgenerated.c: factored out brush calculation to
	an internal utility function and call that function from ::dirty()
	and from the new ::scale_mask().

	* app/core/gimpbrushcore.c: use gimp_brush_scale_mask/pixmap()
	instead of using the lowlevel scale functions directly. Fixes the
	uglyness that we were scaling generated brushes instead of simply
	recalculating them in the right size.

2006-11-09  Michael Natterer  <mitch@gimp.org>

	* libgimpmodule/gimpmodule.h: fixed wrong include guard comment.

2006-11-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: don't include <malloc.h>
	Fixes the build on OSX (or maybe BSD in general).

2006-11-09  Sven Neumann  <sven@gimp.org>

	* configure.in: added missing quotes in test for libcurl.

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_add_menu_path): try not to crash on
	invalid menu paths and avoid a string copy for the common case.

	* app/composite/gimp-composite-mmx.c: commented out unused code.

2006-11-08  Simon Budig  <simon@gimp.org>

	* tools/defcheck.py: don't bail out successfully after the first test,
	don't bail out prematurely on a failed test and actually spot double
	symbols in .def-files if they follow immediately each other...

2006-11-08  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am (EXTRA_DIST): added defcheck.py.

	* tools/defcheck.py: keep a list of .def files, glob didn't work
	for me. Also bail out with a reasonable message if not being
	called from the toplevel source directory.

	* Makefile.am (dist-hook): check .def files for consistency.

2006-11-08  Jakub Steiner <jimmac@ximian.com>

	* stock-tool-foreground-select: update SIOX icon based on feedback